--- a/scss/themes/_base.scss
+++ b/scss/themes/_base.scss
@@ -1,7 +1,7 @@
 /* =Default theme
 -------------------------------------------------------------- */
 
-.box_skitter {
+.skitter {
   .focus_button, .next_button, .prev_button, .play_pause_button {
     display: block;
     background: url('images/sprite-default.png') no-repeat;
