--- a/scss/themes/_clean.scss
+++ b/scss/themes/_clean.scss
@@ -5,6 +5,7 @@
   .prev_button, .next_button, .play_pause_button, .focus_button {
     display: block;
     background: url('images/sprite-clean.png') no-repeat;
+    background-size: 47px auto;
   }
   .prev_button {
     background-position: 0px 0px;
