--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -1,20 +1,21 @@
 /* ------------------------------------------
   You main styles
 ---------------------------------------------*/
+@import 'https://fonts.googleapis.com/css?family=Alegreya+Sans:300,300i,400,400i,500,500i,700,700i,800,800i';
 * {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 body {
-  font-family: Arial, Tahoma;
+  font-family: "Alegreya Sans", Arial, Tahoma;
   color: #333;
   background: white;
   font-size: 80%;
 }
 #page {
   margin: 0 auto;
-  // max-width: 800px;
+  max-width: 800px;
   padding: 40px;
 }
 #page h1 {
@@ -82,9 +83,9 @@ body {
 }
 
 /* ------------------------------------------
-  Custom skitter
+  Skitter custom settings
 ---------------------------------------------*/
-.box_skitter_large {
+.skitter-large {
   max-width: 100%;
   width: 100%;
   height: 300px;
