--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -85,8 +85,12 @@ body {
 /* ------------------------------------------
   Skitter custom settings
 ---------------------------------------------*/
-.skitter-large {
-  max-width: 100%;
+.skitter-large-box {
   width: 100%;
-  height: 300px;
+}
+.skitter-small-box {
+  max-width: 400px;
+}
+.skitter-medium-box {
+  max-width: 500px;
 }
