--- a/scss/skitter.scss
+++ b/scss/skitter.scss
@@ -6,6 +6,9 @@
   &.with-dots {
     margin-bottom: 60px;
   }
+  &.with-thumbs {
+    margin-bottom: 60px;
+  }
   img {
     max-width: none;
   }
