--- a/scss/themes/_round.scss
+++ b/scss/themes/_round.scss
@@ -1,10 +1,9 @@
-/* =Round theme
--------------------------------------------------------------- */
+// Round theme
 
 .skitter-round {
   .prev_button, .next_button, .play_pause_button, .focus_button {
     display: block;
-    background: url('images/sprite-round.png') no-repeat;
+    background: url('../images/skitter/sprite-round.png') no-repeat;
     background-size: 47px auto;
   }
   .prev_button {
