Ajuste estilo do box do preview e removendo largura automatica do box das thumbs quando nao passam da largura do box do skitter

--- a/scss/skitter.scss
+++ b/scss/skitter.scss
@@ -231,6 +231,7 @@
     height: 100px;
     overflow: hidden;
     margin: 0;
+    padding: 0;
     list-style: none;
     display: block;
     position: absolute;
